# ROS2_hardware_interface

install/: local_setup.sh  setup.sh
install/encoder_reader/lib/encoder_reader/: encoder_odom  encoder_serial_node
install/encoder_reader/share/encoder_reader/: package.sh  package.xml
log/: latest_build
src/encoder_reader/: package.xml  setup.py
src/encoder_reader/description/: robot.urdf
src/encoder_reader/encoder_reader/: encoder_serial_node.py
src/encoder_reader/launch/: encoder_system.launch.py
src/encoder_reader/msg/: EncoderTicks.msg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/encoder_reader/lib/encoder_reader/: motor_interface
src/install/encoder_reader/share/encoder_reader/: package.sh  package.xml
src/install/encoder_reader/share/encoder_reader/config/: mapper_params_online_async.yaml
src/install/encoder_reader/share/encoder_reader/launch/: encoder_system.launch.py  online_async.launch.py
src/log/: latest_build
