<?xml version="1.0"?>
<package format="3">
  <name>encoder_reader</name>
  <version>0.0.0</version>
  <description>ROS2 node to read encoder data from Arduino</description>
  <maintainer email="mehul@example.com">Mehul</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>nav2_common</depend>  <!-- For HasNodeParams -->
  <depend>slam_toolbox</depend> <!-- For SLAM -->
  <depend>ament_index_python</depend>  <!-- To get package share directory -->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <launch>
      <launch_file>launch/encoder_system.launch.py</launch_file>
    </launch>
  </export>

</package>
